k8s/base/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: devops-practice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/dedkik/devopspractice-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000

        resources:
          requests:
            cpu: "150m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "600Mi"

        # === Probes ===
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 8

        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: devops-practice
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
