k8s/base/mongo-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: devops-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express:1.0.2
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: devops-practice
spec:
  selector:
    app: mongo-express
  ports:
  - port: 8081
    targetPort: 8081
